# Fusion

./: .gitignore  .gitmodules  CMakeLists.txt  Fusion.sln  README.md  premake5.lua
Dummy/: dummy.cpp
FusionEngine/: FusionEngine.vcxproj  premake5.lua
FusionEngine/modules/: RenderModule.h
FusionEngine/modules/Core/: Base.h  EventSystem.h  Log.h  UUID.h  premake5.lua
FusionEngine/modules/Core/src/: EventSystem.cpp  Log.cpp
FusionEngine/modules/Vulkan/: premake5.lua
FusionEngine/modules/Vulkan/include/VulkanModule/: VulkanModule.h
FusionEngine/modules/Vulkan/src/: Source.cpp  VulkanModule.cpp  VulkanModuleData.h
FusionEngine/modules/Vulkan/src/Vulkan/: Instance.cpp  Instance.h
FusionEngine/src/: fepch.cpp  fepch.h
FusionEngine/src/Core/: Application.cpp  Application.h  ApplicationConfig.cpp  ApplicationConfig.h  Assert.h  Base.h  Entrypoint.h  EventContext.h  EventSystem.cpp  EventSystem.h  Input.cpp  Input.h  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  Result.h  Time.cpp  Time.h  UUID.h  Window.cpp  Window.h
FusionEngine/src/Core/Camera/: Camera.cpp  Camera.h  OrthographicCameraController.cpp  OrthographicCameraController.h  PerspectiveCameraController.cpp  PerspectiveCameraController.h
FusionEngine/src/Core/Events/: Event.cpp  Event.h  EventContext.h  EventSystem.cpp  EventSystem.h
FusionEngine/src/Core/Window/: Input.h  InputMap.h  KeyCodes.h  Layer.h  LayerStack.cpp  LayerStack.h  Window.cpp  Window.h
FusionEngine/src/IO/: Directory.cpp  Directory.h  File.cpp  File.h  StringUitls.cpp  StringUitls.h
FusionEngine/src/IO/FileLoaders/: ObjModel.cpp  ObjModel.h
FusionEngine/src/Platform/: Platform.h  PlatformWin32.cpp  PlatformX11.cpp  RenderModule.h
FusionEngine/src/Platform/Vulkan/: VulkanBuffer.cpp  VulkanBuffer.h  VulkanDevice.cpp  VulkanDevice.h  VulkanFrameBuffer.cpp  VulkanFrameBuffer.h  VulkanImage.cpp  VulkanImage.h  VulkanIndexBuffer.cpp  VulkanIndexBuffer.h  VulkanInstance.cpp  VulkanInstance.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanRenderApi.cpp  VulkanRenderApi.h  VulkanRendererBackend.cpp  VulkanRendererBackendData.h  VulkanResourceManager.cpp  VulkanResourceManager.h  VulkanShader.cpp  VulkanShader.h  VulkanSwapChain.cpp  VulkanSwapChain.h  VulkanUniformBuffer.cpp  VulkanUniformBuffer.h  VulkanUtils.h  VulkanVertexBuffer.cpp  VulkanVertexBuffer.h
FusionEngine/src/Platform/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
FusionEngine/src/Renderer/: Framebuffer.cpp  Framebuffer.h  Image.cpp  Image.h  IndexBuffer.cpp  IndexBuffer.h  Pipeline.cpp  Pipeline.h  RenderApi.cpp  RenderApi.h  RenderBackend.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  Shader.cpp  Shader.h  ShaderLibrary.cpp  ShaderLibrary.h  UniformBuffer.cpp  UniformBuffer.h  VertexBuffer.cpp  VertexBuffer.h
FusionEngine/src/Scene/: Components.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h
FusionEngine/src/UI/: ImGui.cpp  ImGui.h  ImGuiBackend.cpp  ImGuiBackend.h  ImGuiUtils.h
FusionForge/: FusionForge.vcxproj  imgui.ini  premake5.lua
FusionForge/src/: EditorLayer.cpp  EditorLayer.h  Source.cpp
FusionForge/src/Panels/: SceneHierarchyPanel.cpp
Sandbox/: Sandbox.vcxproj  fusion.conf  imgui.ini  premake5.lua
Sandbox/assets/models/dino/: dino.mtl
Sandbox/resources/shaders/: quad_fragment.glsl  quad_vertex.glsl  test_vertex.glsl
Sandbox/src/: SandboxLayer.cpp  SandboxLayer.h  Source.cpp
scripts/: GenerateVS22.bat  Setup.py  ValidateModules.py  Vulkan.py  build.sh  generate_VS22.bat  generate_gmake2.sh  generate_vscode.sh  generate_vscode_windows.bat  setup-macos.sh  setup.bat  setup.sh
